# snatch

./: .gitignore  pyproject.toml
snatch/: __init__.py
snatch/commands/: __init__.py  __main__.py  snatch.py
snatch/workers/: __init__.py  context.py  processor.py  snatcher.py  worker.py
tests/: test_snatch.py
