[tool.poetry]
name = "snatch"
version = "0.1.0"
description = "Intended for retrieving and processing different collectables."
authors = ["Hamologist <hamologist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
snatch = "snatch:snatch_command"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
